Fix rolling archive cleanup to rebuild nodes from scratch
The previous rolling cleanup used seed-recording-log-from-snapshot which
removed TERM entries from the recording-log, causing nodes to fail when
they tried to become leader.

Changes:
- Replace seed-recording-log approach with full node rebuild
- Nodes are wiped and rebuild from scratch via snapshot catchup
- Add snapshot verification before cleanup proceeds
- Add detailed snapshot logging for debugging
- Add rolling-cleanup endpoint and UI button
- Increase progress polling to 50ms during operations
- Auto-cleanup threshold at 300MB (not yet wired to status check)

The fix works by:
1. Taking snapshot on leader
2. For each node: stop → wipe ALL data → restart → catchup from leader
3. Node rebuilds fresh archive with proper TERM entries

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>